--- a/css.html
+++ b/css.html
@@ -7,31 +7,163 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Curso de CSS3</title>
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #333;
+            padding: 15px;
+        }
+
+        .header img {
+            width: 200px;
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+
+        .header form {
+            margin-top: -40px;
+        }
+
+        .header .social-icons {
+            display: flex;
+            align-items: center;
+        }
+
+        .header .social-icons img {
+            width: 30px;
+            margin-left: 10px;
+        }
+
+        .menu {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            background-color: #444;
+            display: flex;
+            justify-content: center;
+        }
+
+        .menu li {
+            display: inline-block;
+        }
+
+        .menu li a {
+            text-decoration: none;
+            color: white;
+            padding: 14px 20px;
+            display: block;
+        }
+
+        .menu li a:hover {
+            background-color: #555;
+        }
+
+        .content {
+            padding: 20px;
+            text-align: center;
+        }
+
+        .course {
+            display: inline-block;
+            margin: 20px;
+            text-align: center;
+        }
+
+        .course img {
+            width: 100px;
+            height: 60px;
+        }
+
+        .course p {
+            margin: 5px 0;
+        }
+
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+            width: 100%;
+            margin-top: auto;
+        }
+
+        .footer a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
+        }
+
+        .container {
+            text-align: left;
+            float: left;
+            margin-top: 30px;
+            margin-left: 100px;
+            width: 800px;
+            border: 1px solid black;
+            padding: 1px 20px;
+        }
+
+        .container2 {
+            float: right;
+            text-align: left;
+            margin-top: 30px;
+            margin-right: 30px;
+            margin-bottom: 100px;
+            width: 300px;
+            height: 90%;
+            border: 1px solid black;
+            padding: 1px 20px;
+        }
+
+        .select:hover {
+            box-shadow: 5px 8px 12px black;
+            transition: all 0.5s ease-in-out;
+            border: 1px solid black;
+            cursor: pointer;
+        }
+
+        .select1 {
+            width: 130px;
+        }
+
+        .select1:hover {
+            box-shadow: 5px 8px 12px black;
+            transition: all 0.5s ease-in-out;
+            transform: scale(1.1);
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
-    <header class="header" style="padding: 15px">
-        <a href="index.html"><img
-                style="display: flex; align-items: flex-start; width: 200px; margin-top: 20px; margin-left: 20px;"
-                src="img/logo.jpg" alt=""></a>
-
-        <form action="a" style="margin-top: -40px">
+    <header class="header">
+        <a href="index.html"><img src="img/logo.jpg" alt="Logo"></a>
+        <form action="a">
             <input type="search" name="busqueda" placeholder="Buscar cursos">
         </form>
-        <a href="https://instagram.com"><img
-                style="margin-top: -40px; margin-left: 20px; margin-right:20px; float: right; color: white; width: 30px;"
-                src="img/inst.png.opdownload"></a>
-        <a href="https://twitter.com"><img
-                style="margin-top: -40px; margin-left: 20px; margin-right:80px; float: right; color: white; width: 30px;"
-                src="img/twit.png.opdownload"></a>
-        <a href="https://twitter.com"><img
-                style="margin-top: -40px; margin-left: 20px; margin-right:125px; float: right; color: white; width: 60px;"
-                src="img/logotipo-facebook.png"></a>
+        <div class="social-icons">
+            <a href="https://instagram.com"><img src="img/inst.png.opdownload" alt="Instagram"></a>
+            <a href="https://twitter.com"><img src="img/twit.png.opdownload" alt="Twitter"></a>
+            <a href="https://facebook.com"><img src="img/logotipo-facebook.png" alt="Facebook"></a>
+        </div>
     </header>
-    <div style="float:left; text-align: left; margin-left:100px; width: 600px;">
-        <h1>Curso de <br>css<br>a CSS3</h1>
-        <p>CSS, en español «Hojas de estilo en cascada», es un lenguaje de diseño gráfico para definir y crear la presentación de un documento estructurado escrito en un lenguaje de marcado</p>
 
+    <div style="float:left; text-align: left; margin-left:100px; width: 600px;">
+        <h1>Curso de <br>CSS<br>a CSS3</h1>
+        <p>CSS, en español «Hojas de estilo en cascada», es un lenguaje de diseño gráfico para definir y crear la presentación de un documento estructurado escrito en un lenguaje de marcado.</p>
         <form action="a">
             <input type="search" style="width: 400px;" name="busqueda" placeholder="Buscar cursos">
             <button id="botones" type="submit">Comenzar</button>
@@ -42,16 +174,15 @@
 
     <div class="container">
         <h2>Contenido del curso</h2>
-        <p>Siguiendo este fundamento resulta muy fácil para un diseñador web realizar cambios en la apariencia de una web sin afectar de manera dramática a su contenido. El contenido siempre será el mismo, solo cambia como aquello 
-            que podemos ver. CSS es fácil de entender y aprender, y nos da un potente control de cómo diseñar los documentos HTML?</p>
+        <p>Siguiendo este fundamento resulta muy fácil para un diseñador web realizar cambios en la apariencia de una web sin afectar de manera dramática a su contenido. El contenido siempre será el mismo, solo cambia como aquello que podemos ver. CSS es fácil de entender y aprender, y nos da un potente control de cómo diseñar los documentos HTML.</p>
     </div>
 
     <div class="container2">
         <h1>$250.000</h1>
-        <button type="submit" style="width: 300px; height: 40px;" id="botones">Comprar</button>
+        <button id="botones" type="button" style="width: 300px; height: 40px;" onclick="window.location.href='formularios/compra.html'">Comprar</button>
         <br>
         <br>
-        <button id="botones" type="submit" style="width: 300px; height: 40px;">Comenzar</button>
+        <button id="botones" type="button" style="width: 300px; height: 40px;" onclick="window.location.href='formularios/comenzar.html'">Comenzar</button>
         <h2>Información</h2>
         <p>Clases en vivo para complementar los cursos.</p>
     </div>
@@ -67,7 +198,7 @@
                     <label for="heart" aria-label="like" style="float: right; margin-top: -50px;">❤</label>
                 </div>
                 <h2>Curso de Java</h2>
-                <p>Curso para aprender lenguajes relacionados </p>
+                <p>Curso para aprender lenguajes relacionados</p>
             </div>
         </a>
         <br>
@@ -97,8 +228,7 @@
             </div>
         </a>
     </div>
-    <br>
-    <br>
+
     <footer style="color: black; width: 100%; padding: 10px 0px;">
         <hr width="80%">
         Empresa <a href="a">https://curosOnline.com</a>
